<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="absence_reason_family_member">בשל בן משפחה</string>
    <string name="absence_reason_imoh">בשל הודעת משרד הבריאות או קופת החולים שעלי לשהות בבידוד</string>
    <string name="absence_reason_mda">לפי דרישת מד\"א</string>
    <string name="accept">אישור</string>
    <string name="accept_perm">אישור</string>
    <string name="according_device_settings">לפי הגדרות המכשיר</string>
    <string name="action_settings">Settings</string>
    <string name="active">פעיל</string>
    <string name="active_settings">הגדרת מצב</string>
    <string name="add_covid_test_btn_text">הוספת בדיקה</string>
    <string name="add_favorit">הוסף למועדפים</string>
    <string name="add_measure">הוסף מדידה+</string>
    <string name="add_patient">הוספת מטופל</string>
    <string name="add_report">הוספת דיווח</string>
    <string name="add_shortcut">הוסף קיצור דרך</string>
    <string name="add_widget">Add widget</string>
    <string name="address">כתובת</string>
    <string name="address_must_specified">יש להגדיר כתובת</string>
    <string name="administrative_title">הודעה</string>
    <string name="advanced_geo_settings">הגדרות איכון כוננים</string>
    <string name="advanced_geolocation_service_option">איכון כוננים בדיוק גבוה\n(עלול לצרוך יותר סוללה)</string>
    <string name="age_group_text">קבוצת גיל:*</string>
    <string name="agree">מסכים</string>
    <string name="alert_konan">הודעות כונן</string>
    <string name="alert_ptt_incoming_call">התרעה על שיחת PTT נכנסת</string>
    <string name="alert_team">הודעות צוות</string>
    <string name="alert_tones">צלילי התראה</string>
    <string name="allow">אפשר</string>
    <string name="allow_all">אפשר הכל</string>
    <string name="allow_permission">התר הרשאה</string>
    <string name="allow_permission_location">נא אשר הרשאות גישה לנתוני הGPS מהמכשיר</string>
    <string name="an_error_occurred">אירעה שגיאה</string>
    <string name="and">ו</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="antibody">אנטיגן</string>
    <string name="app_name">צוותי מגן דוד אדום</string>
    <string name="app_name_community">מדא קהילה</string>
    <string name="app_name_cwa">מוקד חירום חבד</string>
    <string name="app_name_ih">מערך הכוננים הלאומי</string>
    <string name="app_name_ph">צוותי ההצלה</string>
    <string name="app_settings">הגדרות אפליקציה</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="arrival_in_minutes_title">דק\'</string>
    <string name="arrival_timing_title">זמן הגעה אל היעד:</string>
    <string name="arrived_title">הגעתי אל היעד!</string>
    <string name="asterisk">*</string>
    <string name="available">זמין</string>
    <string name="available_use_ptt">PTT זמין לשימוש</string>
    <string name="back">חזור</string>
    <string name="beeper">ביפר</string>
    <string name="bell">פעמון</string>
    <string name="biffer_code">קוד ביפר</string>
    <string name="bike">אופנוע</string>
    <string name="birthday">תאריך לידה</string>
    <string name="blood_pressure_title">לחץ דם</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bracket">סוגר</string>
    <string name="breathing_title">נשימה:</string>
    <string name="btn_report_arrival_text">דיווח על חזרה מחו\"ל</string>
    <string name="btn_report_exam_text">דיווח על ביצוע בדיקה</string>
    <string name="btn_report_exposure_text">דיווח על חשיפה</string>
    <string name="btn_report_positive_result_text">דיווח על היותי מאומת לקורונה</string>
    <string name="btn_report_symptoms_text">דיווח על מחלה/תסמינים</string>
    <string name="btn_upload_files_text">העלאת קבצים</string>
    <string name="busy">עסוק</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_only">לחצן בלבד</string>
    <string name="callMe">תתקשרו אלי</string>
    <string name="call_code">קוד הזנקה -</string>
    <string name="call_hour_title">שעת קבלת האירוע:</string>
    <string name="call_log">יומן שיחות</string>
    <string name="call_ptt">שיחת PTT</string>
    <string name="call_title">אירוע %1$s מתוך %2$s</string>
    <string name="camera">מצלמה</string>
    <string name="camera_using">שימוש במצלמה</string>
    <string name="canDrawOverlaysMessage">כדי לאפשר למערכת ה PTT להציג התרעה על שיחה נכנסת יש לאפשר זאת בהגדרות המערכת\n\nהודעה לאפליקציית טסטים גירסא test.ptt.18.06</string>
    <string name="canDrawOverlaysOpen">פתח מסך הרשאות</string>
    <string name="canDrawOverlaysTitle">מתן הרשאות</string>
    <string name="cancel">ביטול</string>
    <string name="changeAddress">עדכן כתובת</string>
    <string name="change_address">הזן כתובת</string>
    <string name="change_status__enabled_location_service">לשינוי סטטוס - הפעל שרותי מיקום</string>
    <string name="change_status_faild">אין תשובה מהשרת נסה שוב</string>
    <string name="change_status_possible_when_location_data_work">שינוי סטטוס אפשרי רק כאשר נתוני מיקום פועלים</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chooseImage">בחר תמונה</string>
    <string name="choose_from_list">בחירה מהרשימה</string>
    <string name="choose_password_title">בחירת סיסמא אישית</string>
    <string name="choose_status">בחירת סטטוס כונן</string>
    <string name="choose_status_explanation">בחר את רמת הזמינות המתאימה לך. זכור! ככל שהסטטוס זמין יותר, הנתונים על מיקומך יהיו מדוייקים הרבה יותר.</string>
    <string name="choose_treatments">בחר טיפולים שבוצעו</string>
    <string name="click_to_set_address">לחץ להזנת כתובת</string>
    <string name="close">סגור</string>
    <string name="res_0x7f10007a_com_crashlytics_android_build_id">bdd0efc69d094fd5a09b439dcef00745</string>
    <string name="comment">הערות</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="comunication_problem_description">בעיה בתקשורת, נא וודא כי הגדרות התקשורת במכשיר תקינות</string>
    <string name="config_auth_page_banner_description">Page Banner</string>
    <string name="config_auth_page_icon_of_the_problem_description">Icon of the problem</string>
    <string name="configure">Configure</string>
    <string name="connected">מחובר</string>
    <string name="connecting">מתחבר...</string>
    <string name="connection_error">תקלת תקשורת בלתי צפוייה</string>
    <string name="consciousness_title">הכרה:</string>
    <string name="contactUs">צור קשר</string>
    <string name="contact_busy">משתמש תפוס</string>
    <string name="contact_disabled">משתמש לא זמין</string>
    <string name="contacts">אנשי קשר</string>
    <string name="expo_location_title_text">מקום החשיפה:*</string>
    <string name="first_permission">מתנדב / עובד יקר\nכדי לאפשר שימוש יעיל באפליקציה, יש לאשר את ההגדרות הבאות:</string>
    <string name="home">בית</string>
    <string name="isolation_title">דיווח בידודים</string>
    <string name="marginal_positive_test_result">חיובי גבולי</string>
    <string name="message_date_tittle_text">תאריך ההודעה:*</string>
    <string name="more_than_fourteen">14 ומעלה</string>
    <string name="negative_test_result">שלילי</string>
    <string name="no_covid_test_result">אין</string>
    <string name="no_expo_history">לא קיימות חשיפות במערכת\nחשיפות חדשות יופיעו כאן</string>
    <string name="other_absence_reason">סיבה אחרת (נא פרט כמה שניתן)</string>
    <string name="other_expo_location_description_hint">תיאור מפורט של מקום החשיפה האחר</string>
    <string name="other_option">אחר</string>
    <string name="permission">הרשאות</string>
    <string name="positive_test_result">חיובי</string>
    <string name="side_load_message">יש להתקין יישום זה מחנות ה-PlayStore</string>
    <string name="side_load_settings">עבור לחנות האפליקציות</string>
    <string name="side_load_todo">עבור לחנות האפליקציות והתקן את היישום מחדש לצורך פעילות תקינה של המערכת</string>
    <string name="test_result_title_text">תוצאה:*</string>
    <string name="twelve_to_fourteen">12 – 14</string>
    <string name="work">עבודה</string>
    <string name="zero_to_eleven">0 – 11</string>
</resources>