<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rdg_absence_reason"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">
    <RadioButton
        android:id="@+id/rdb_because_imoh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/absence_reason_imoh"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr">
        <TextView
            android:id="@+id/txv_message_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_date_tittle_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/ndp_select_imoh_message_date"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.groboot.mdaemergency.ui.isolation_report_system.views.generic_views.NativeDatePickerView
            android:id="@+id/ndp_select_imoh_message_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txv_message_date_title"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RadioButton
        android:id="@+id/rdb_because_family_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/absence_reason_family_member"/>
    <RadioButton
        android:id="@+id/rdb_because_mda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/absence_reason_mda"/>
    <RadioButton
        android:id="@+id/rdb_because_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/other_option"/>
    <EditText
        android:enabled="false"
        android:gravity="start|top"
        android:id="@+id/edt_other_reason"
        android:background="@drawable/input_bg"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:hint="@string/other_absence_reason"
        android:maxLines="2"
        android:lines="2"
        android:minLines="2"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:importantForAutofill="no"/>
</RadioGroup>
