<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/red_text"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginBottom="4dp"
        android:text="@string/permission"/>
    <TextView
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#ff404040"
        android:gravity="center"
        android:id="@+id/tv_data"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_permission"/>
    <ListView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"/> - 
    <RelativeLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="14dp">
        <Button
            android:textColor="@color/white"
            android:id="@+id/btn_get_all_permission"
            android:background="@drawable/red_btn"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_margin="6dp"
            android:text="@string/allow_all"
            android:layout_alignParentLeft="true"/>
        <Button
            android:textColor="@color/white"
            android:id="@+id/btn_close"
            android:background="@drawable/red_btn"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_margin="6dp"
            android:text="@string/close"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
