<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txv_test_result_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">
        <RadioGroup
            android:id="@+id/rdg_covid_result_col_b"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl">
            <RadioButton
                android:id="@+id/rdb_negative_test_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/negative_test_result"/>
            <RadioButton
                android:id="@+id/rdb_marginal_test_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/marginal_positive_test_result"/>
        </RadioGroup>
        <RadioGroup
            android:id="@+id/rdg_covid_result_col_a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl">
            <RadioButton
                android:id="@+id/rdb_no_test_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/no_covid_test_result"/>
            <RadioButton
                android:id="@+id/rdb_positive_test_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/positive_test_result"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:id="@+id/txv_test_result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/test_result_title_text"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
