<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:enabled="false"
        android:gravity="start|top"
        android:id="@+id/edt_exposure_location_description"
        android:background="@drawable/input_bg"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:hint="@string/other_expo_location_description_hint"
        android:maxLines="2"
        android:lines="2"
        android:minLines="2"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdg_select_expo_locations"
        app:layout_constraintVertical_bias="0"/>
    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/rdg_select_expo_locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/txv_expo_location_title"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/rdb_other_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_option"
            android:layoutDirection="rtl"
            android:layout_marginStart="10dp"/>
        <RadioButton
            android:id="@+id/rdb_work_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:layoutDirection="rtl"
            android:layout_marginStart="10dp"/>
        <RadioButton
            android:id="@+id/rdb_home_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layoutDirection="rtl"
            android:layout_marginStart="10dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/txv_expo_location_title"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/expo_location_title_text"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
