<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/rdg_age_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txv_age_group_title"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">
        <RadioButton
            android:id="@+id/rdb_upto_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_than_fourteen"
            android:layoutDirection="rtl"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <RadioButton
            android:id="@+id/rdb_upto_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twelve_to_fourteen"
            android:layoutDirection="rtl"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/rdb_other_exposure"
            app:layout_constraintTop_toTopOf="parent"/>
        <RadioButton
            android:id="@+id/rdb_more_than_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_to_eleven"
            android:layoutDirection="rtl"
            android:layout_marginStart="10dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/txv_age_group_title"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/age_group_text"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rdg_age_group"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
