<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:textColor="@color/autocompletet_background_color"
        android:id="@+id/btn_take_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_load_settings"
        android:backgroundTint="@color/green_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_config_icon"
        app:layout_constraintVertical_bias="0.55"/>
    <ImageView
        android:id="@+id/imv_config_icon"
        android:layout_width="134dp"
        android:layout_height="153dp"
        android:contentDescription="@string/config_auth_page_icon_of_the_problem_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_unauth_reason"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@drawable/ic_baseline_app_blocking_24"/>
    <ImageView
        android:id="@+id/imv_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/config_auth_page_banner_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/ih_logo"/>
    <TextView
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/txv_unauth_reason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/side_load_message"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_banner"
        app:layout_constraintVertical_bias="0"/>
    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/txv_unauth_todo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/side_load_todo"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/imv_config_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_unauth_reason"
        app:layout_constraintVertical_bias="0.26"/>
</androidx.constraintlayout.widget.ConstraintLayout>
